modified the pytorch code, added person detection metrics, added a demo gif, adjusted the fe

--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -8,14 +8,14 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="static/css/style.css">
-    <title>Clothing Recognition</title>
+    <title>Clothing & Person Detection</title>
 
   </head>
 
   <body>
     <header class="text-white text-center">
         <br>
-        <h1 class="display-4">Clothing Recognition</h1>
+        <h1 class="display-4">Clothing & Person Detection</h1>
         <br>
         <p class="lead mb-0">For each person in the image, 
             the model will detect and classify 
@@ -53,7 +53,8 @@
             </div>
 
             <div class="image-area mt-4"><img id="imageResult0" src="#" alt="" class="img-fluid rounded shadow-sm mx-auto d-block"></div>
-            
+            <br><br>
+
         </div>
     </div>
 
