--- a/App/static/css/style.css
+++ b/App/static/css/style.css
@@ -50,7 +50,11 @@
 
 body {
     min-height: 100vh;
-    background-color: #657399;
-    background-image: linear-gradient(147deg, #07395a 0%, #868fa1 100%);
+    background-color: rgb(16, 21, 24);
 }
 
+.imgResultContainer {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+}
